<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@drawable/medium">
    
   <TextView 
    android:id="@+id/Medium"
    android:layout_centerHorizontal="true"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/Medium"
    android:textSize="70sp"
    android:textStyle="bold"
    android:textColor="#f2ad36"
    />

<Button
    android:id="@+id/Bouton_gm1"
    android:layout_below="@id/Medium"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/G1"
    android:background="#f2ad36"
    android:onClick="onClick"
    />

<Button
    android:id="@+id/Bouton_gm2"
    android:layout_below="@id/Medium"
    android:layout_toRightOf="@id/Bouton_gm1"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/G2"
    android:background="#f2ad36"
    android:onClick="onClick" />

<Button
    android:id="@+id/Bouton_gm3"
    android:layout_below="@id/Medium"
    android:layout_toRightOf="@id/Bouton_gm2"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/G3"
    android:background="#f2ad36"
    android:onClick="onClick" />
    
<Button
    android:id="@+id/Bouton_Return"
    android:layout_alignParentBottom="true"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:text="@string/Return"
    android:onClick="onClickReturn"
    />

</RelativeLayout>
