<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/espace_menu" >
    
    <TextView 
        android:id="@+id/Menu"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Menu"
        android:textStyle="bold"
        android:textColor="#ead301"
        android:textSize="70sp"/>
    
    
    
    <Button
        android:id="@+id/Bouton_1"
        android:layout_width="fill_parent"
        android:layout_height="100dp"
        android:layout_centerVertical="true"
        android:onClick="onClick"
        android:text="@string/Bouton_1"
        android:background="#f2ad36"
        android:textSize="20sp"
		android:textColor="#000000"/>
    
     <Button 
     	android:id="@+id/Bouton_2"
     	android:text="@string/Bouton_2"
     	android:layout_width="fill_parent"
     	android:layout_height="100dp"
     	android:onClick="onClick"
     	android:layout_above="@id/Bouton_1"
     	android:background="#0be220" 
     	android:textSize="20sp"
     	android:textColor="#000000"/>
        
     <Button
         android:id="@+id/Bouton_3"
         android:layout_width="fill_parent"
         android:layout_height="100dp"
         android:layout_below="@id/Bouton_1"
         android:onClick="onClick"
         android:text="@string/Bouton_3"
         android:textSize="20sp"
         android:background="#ff0000" 
         android:textColor="#000000"/>
    
</RelativeLayout>
