<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="projet.flowfreeupmc.FlowModelActivity" >

    <projet.flowfreeupmc.FlowGridView
        android:id="@+id/flowGridView"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" />
    
    
	<Button
	    android:id="@+id/Button_menu"
	    android:layout_width="wrap_content"
	    android:layout_height="50dp"
	    android:layout_below="@id/flowGridView"
	    android:onClick="onClickMENU"
	    android:text="@string/Menu"
	    android:textSize="15sp" />
	
	
	<Button
	    android:id="@+id/Button_exit"
		android:layout_centerHorizontal="true"
		android:layout_width="wrap_content"
	    android:layout_height="50dp"
	    android:layout_below="@id/flowGridView"
	    android:layout_toRightOf="@id/Button_menu"
	    android:onClick="onClickEXIT"
	    android:text="@string/Exit"
	    android:textSize="15sp" />
	
	
	
	<Button
	    android:id="@+id/Button_reinit"
	    android:layout_width="wrap_content"
	    android:layout_height="50dp"
	    android:layout_below="@id/flowGridView"
	    android:layout_toRightOf="@id/Button_exit"
	    android:onClick="onClickNEW"
	    android:text="@string/Réinitialiser"
	    android:textSize="15sp" />
	
	<Button 
	    android:id="@+id/Button_previous"
	    android:layout_width="wrap_content"
	    android:layout_height="50dp"
	    android:layout_below="@id/flowGridView"
	    android:layout_toRightOf="@id/Button_reinit"
	    android:onClick="onClickPREVIOUS"
	    android:text="@string/Previous"
	    android:textSize="15sp"/>
	
	<Button
	    android:id="@+id/Button_next"
	    android:layout_width="wrap_content"
	    android:layout_height="50dp"
	    android:layout_below="@id/flowGridView"
	    android:layout_toRightOf="@id/Button_previous"
	    android:onClick="onClickNEXT"
	    android:text="@string/Next"
	    android:textSize="15sp" />
	
	<TextView 
	    android:id="@+id/Best_score"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_centerHorizontal="true"
	    android:layout_below="@id/Button_reinit"
	    android:gravity="center"
	    android:textSize="20sp"
	    android:textColor="#e2b500"
	    
	    />	

    
</RelativeLayout>